# bored-with-faults-and-leaks

./: .gitignore  Build.ps1  CMakeLists.txt  README.md  Run.ps1
src/: main.c
src/include/: foundational_macros.h  foundations.h  functions.h  scopes.h  stack_store.h  variables.h
src/ingredients/: ingredients.c
src/ingredients/include/: basic_types.h  ingredients.h  scopes.h  variables.h
